# music-recommendation-system

./: .gitignore  .slugignore  Algorithms.md  Algorithms_backend.md  Functional & Non Functional Requirements.docx  Gantt.xlsx  Goals, Objectives & Metrics.docx  Procfile  README.md  README_for_dev.md  buildpack  client_UI_walk_through.md  pyproject.toml  statistics.md
backend/: crud.py  main.py  models.py  schemas.py
backend/app/: algo.py  crud.py  database.py  main.py  models.py  pinecone_crud.py  schemas.py  stats_crud.py  stats_reporter_crud.py  utils.py
backend/app/routers/: __init__.py  songs.py
backend/routes/: song.py
docs/: Recommendation_design.drawio
frontend/: Spotify_Recommender_UI.html  index.html  script.js  style.css
frontend/login/: index.html  script.js  style.css
frontend/recommendation/: index.html  script.js  style.css
frontend/stats/: index.html  script.js  style.css
scripts/: main.py
scripts/RDS_scripts/: create_table_scripts.sql
scripts/data_ready_for_db_parquet/: .part-00000-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00001-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00002-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00003-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00004-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00005-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00006-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc  .part-00007-491c4cc2-1622-46c3-aefd-a55effb32dcf-c000.snappy.parquet.crc
scripts/pine/: create_index.py  insert.py
