[tool.poetry]
name = "music-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Haim <Haim.Michalashvili@lusha.com>"]

[tool.poetry.dependencies]
python = "3.12.3"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
