[tool.poetry]
name = "music-recommendation-system"
version = "0.1.0"
description = ""
authors = ["Haim <Haim.Michalashvili@lusha.com>"]

[tool.poetry.dependencies]
python = "3.12.0"
fastapi = "^0.111.0"
uvicorn = "^0.29.0"
SQLAlchemy = "^2.0.30"
pydantic = "^2.7.1"
python-dotenv = "^1.0.1"
passlib = "^1.7.4"
psycopg2 = "^2.9.9"
scikit-learn = "^1.4.2"
pandas = "^2.2.2"
setuptools = "^69.5.1"
ipython = "^8.24.0"
pyarrow = "^16.1.0"
fastparquet = "^2024.5.0"
werkzeug = "^3.0.3"

[tool.poetry.dev-dependencies]
pyspark = "3.5.1"
delta-spark = "3.1.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
